--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -8,9 +8,19 @@ autoinstall:
   storage:
     layout:
       name: direct
+    disks:
+      - device: /dev/sda
+        wipes: superblock
+        partitions:
+          - size: 20480
+            type: primary
+            filesystem: ext4
+            mount_point: /
+          - size: 10240
+            type: primary
+            filesystem: ext4
+            mount_point: /home
   packages:
     - vim
     - git
-  late-commands:
-    - curtin in-target -- apt update
 
